--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "axios": "^0.22.0",
-    "bootstrap": "^5.1.1"
+    "bootstrap": "^5.1.1",
+    "mapbox-gl": "^2.5.1"
   }
 }
