--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.10.2",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
+    "cors": "^2.8.5",
     "mapbox-gl": "^2.5.1"
   }
 }
